Fixing overflow on mobile

--- a/styles/less/main.less
+++ b/styles/less/main.less
@@ -59,6 +59,7 @@ html, body {
     background-color: #FAFAFA;
     font-size: 18px;
     font-family: 'Roboto', Sans-serif;
+    overflow-x: hidden;
     margin: 0;
     height: 100%;
     min-height: 100%;
